# egile-mcp-notifier

./: .gitignore  INSTALL_MS_TODO.md  MS_TODO_IMPLEMENTATION.md  MS_TODO_QUICKREF.md  MS_TODO_SETUP.md  README.md  example.py  example_todo.py  install.bat  install.sh  pyproject.toml
src/egile_mcp_notifier/: __init__.py  notification_service.py  server.py
